# Slic3r

./: .gitignore  CMakeLists.txt  FIXME.md  GEMINI.md  GUI_TODO.md  MAINFRAME_VISUAL.md  PRESETEDITOR_TODO.md  README.md  TODO.md  appveyor.yml  build_auto.bat  build_log.txt  build_vs2022.bat  build_vs2022.ps1  diff.txt  generate_sln.bat  vcpkg.json
.github/workflows/: build_windows.yml  create_release.yml
package/win/: slic3r.exe.manifest  slic3r.rc
port/: PORTING_PLAN.md
port/xs/src/libslic3r/: libslic3r.h
resources/shaders/: gouraud_light.fs  gouraud_light.vs  instanced.fs  instanced.vs
src/: CMakeLists.txt  slic3r.cpp
src/GUI/: ColorScheme.hpp  ConfigWizard.cpp  ConfigWizard.hpp  ExtrusionGeometry.cpp  ExtrusionGeometry.hpp  GUI.cpp  GUI.hpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  MainFrame.cpp  MainFrame.hpp  OptionsGroup.cpp  OptionsGroup.hpp  Plater.cpp  Plater.hpp  Preferences.cpp  Preferences.hpp  Preset.cpp  Preset.hpp  Scene3D.cpp  Scene3D.hpp  Settings.cpp  Settings.hpp  misc_ui.cpp  misc_ui.hpp  refactor_candidates.txt
src/GUI/ColorScheme/: Dark.hpp  Light.hpp
src/GUI/Dialogs/: AboutDialog.cpp  AnglePicker.hpp  MaterialEditor.cpp  ObjectCutDialog.cpp  ObjectSettingsDialog.cpp  ObjectSettingsDialog.hpp  PresetEditor.cpp  PresetEditor.hpp  PrintEditor.cpp  PrinterEditor.cpp  WidgetGallery.cpp  WidgetGallery.hpp
src/GUI/GL/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GLManager.cpp  GLManager.hpp  Shader.cpp  Shader.hpp
src/GUI/OptionsGroup/: Field.hpp  UI_Choice.cpp  UI_Color.cpp  UI_NumChoice.cpp  UI_Slider.cpp
src/GUI/Plater/: ImGuiToolbar.cpp  ImGuiToolbar.hpp  Plate2D.cpp  Plate3D.cpp  Plate3D.hpp  PresetChooser.cpp  PresetChooser.hpp  Preview2D.hpp  Preview3D.cpp  Preview3D.hpp
src/GUI/Theme/: CanvasTheme.cpp  CanvasTheme.hpp  ThemeManager.cpp  ThemeManager.hpp
src/GUI/Widgets/: PresetWidget.cpp  PresetWidget.hpp  SplashScreen.cpp  SplashScreen.hpp  ThemedControls.cpp  ThemedControls.hpp  ThemedMenu.cpp  ThemedMenu.hpp  ThemedMenuBar.cpp  ThemedMenuBar.hpp  ThemedMenuPopup.cpp  ThemedMenuPopup.hpp  ThemedTabbedPanel.cpp  ThemedTabbedPanel.hpp
src/libslic3r/: ConfigBase.cpp  ConfigBase.hpp  ExPolygon.hpp  GCodeWriter.hpp  Model.hpp  Point.cpp  Point.hpp  Polygon.hpp  Print.cpp  Print.hpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  TriangleMesh.cpp  libslic3r.h  utils.cpp  utils.hpp
src/slic3r/GUI/: 3DScene.cpp
src/test/libslic3r/: test_gcodewriter.cpp  test_trianglemesh.cpp
translation/: nl_NL.po
utils/: clang_format
xs/: Build.PL
xs/src/boost_conflict_backup/nowide/: config.hpp
xs/src/libslic3r/: GCodeSender.cpp  GCodeSender.hpp  libslic3r.h
